--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "i18next": "^22.4.15",
+    "js-cookie": "^3.0.5",
     "loader-utils": "3.2.1",
     "mui": "^0.0.1",
     "react": "18.2.0",
