--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
+    "react-router": "^6.10.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
     "vercel": "^28.20.0"
