--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dotenv": "^16.0.3",
     "i18next": "^22.4.15",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "loader-utils": "3.2.1",
     "mui": "^0.0.1",
     "react": "18.2.0",
