--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "i18next": "^22.4.15",
     "js-cookie": "^3.0.5",
     "js-levenshtein": "^1.1.6",
-    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "levenshtein": "^1.0.5",
     "loader-utils": "3.2.1",
     "mui": "^0.0.1",
@@ -26,6 +26,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "stream": "^0.0.2",
     "typescript": "4.1.3",
     "vercel": "^28.20.0"
   },
