--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.128",
     "@mui/material": "5.12.3",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "i18next": "^22.4.15",
     "js-cookie": "^3.0.5",
