--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cowhist19",
   "version": "1.0.0",
   "main": "src/index.js",
+  "license": "MIT",
   "dependencies": {
     "@babel/runtime": "7.13.8",
     "@emotion/react": "11.10.6",
@@ -10,7 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.128",
     "@mui/material": "5.12.3",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs-react": "^2.4.6",
     "dotenv": "^16.0.3",
     "i18next": "^22.4.15",
     "js-cookie": "^3.0.5",
