--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.128",
     "@mui/material": "5.12.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bcryptjs-react": "^2.4.6",
     "dotenv": "^16.0.3",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
+    "react-redux": "^8.0.5",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
