--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "bcryptjs-react": "^2.4.6",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "i18next": "^22.4.15",
     "js-cookie": "^3.0.5",
