--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
     "typescript": "4.1.3",
     "vercel": "^28.20.0"
   },
+  "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "@testing-library/react": "^14.0.0",
+    "enzyme": "^3.11.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --coverage",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "browserslist": [
@@ -40,5 +45,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  }
 }
