--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Cowhist19",
-  "name": "Cowhist19 webapp",
+  "short_name": "CoWhist19©",
+  "name": "CoWhist19© webapp",
   "icons": [
     {
       "src": "favicon.ico",
