--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "loader-utils": "3.2.1",
+    "plotly.js": "^1.58.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
