--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs-react": "^2.4.6",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "echarts-for-react": "^3.0.2",
     "i18next": "^22.4.15",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
