--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "echarts-for-react": "^3.0.2",
+    "esm": "^3.2.25",
     "i18next": "^22.4.15",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "loader-utils": "3.2.1",
-    "plotly.js": "^1.58.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
