--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "bcryptjs-react": "^2.4.6",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "echarts": "^5.4.2",
     "echarts-for-react": "^3.0.2",
-    "esm": "^3.2.25",
     "i18next": "^22.4.15",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
