--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "vercel": "^28.20.0"
   },
   "devDependencies": {
