--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "loader-utils": "3.2.1",
+    "mui-image": "^1.0.7",
+    "nuka-carousel": "^6.0.3",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
     "react-i18next": "^12.2.2",
