--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "loader-utils": "3.2.1",
     "npx": "^10.2.2",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.8.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.3.1",
     "react-redux": "^8.1.3",
