--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "7.23.2",
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "^5.14.14",
-    "@mui/lab": "^5.0.0-alpha.149",
-    "@mui/material": "5.14.14",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/lab": "^5.0.0-alpha.150",
+    "@mui/material": "5.14.15",
     "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
     "bcryptjs-react": "^2.4.6",
-    "crypto-js": "^4.1.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "i18next": "^23.6.0",
     "js-cookie": "^3.0.5",
-    "jwt-decode": "^3.1.2",
+    "jwt-decode": "^4.0.0",
     "loader-utils": "3.2.1",
     "npx": "^10.2.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-dom": "18.2.0",
@@ -27,10 +32,11 @@
     "react-redux": "^8.1.3",
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0"
   },
   "engines": {
-    "node": "^18.17.0"
+    "node": "^18.18.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -38,10 +44,9 @@
     "prettier": "3.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "craco start --verbose",
+    "build": "craco build --verbose",
+    "test": "craco test --env=jsdom"
   },
   "browserslist": [
     ">0.2%",
@@ -53,5 +58,6 @@
     "moduleNameMapper": {
       "axios": "axios/dist/node/axios.cjs"
     }
-  }
+  },
+  "cracoConfig": "./src/configs/craco.config.js"
 }
