--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.0",
     "bcryptjs-react": "^2.4.6",
     "buffer": "^6.0.3",
+    "core-js": "^3.33.2",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
@@ -27,6 +28,7 @@
     "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-alice-carousel": "^2.8.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "18.2.0",
     "react-i18next": "^13.3.1",
     "react-redux": "^8.1.3",
@@ -44,9 +46,13 @@
     "prettier": "3.0.3"
   },
   "scripts": {
-    "start": "craco start --verbose",
-    "build": "craco build --verbose",
-    "test": "craco test --env=jsdom"
+    "build": "react-app-rewired build --verbose",
+    "start": "react-app-rewired -r dotenv/config start --verbose",
+    "test": "react-app-rewired test --env=jsdom",
+    "prettify": "npx prettier . --write",
+    "OLDbuild": "react-scripts build --verbose",
+    "OLDstart": "react-scripts start --verbose",
+    "OLDtest": "react-scripts test --env=jsdom"
   },
   "browserslist": [
     ">0.2%",
@@ -58,6 +64,5 @@
     "moduleNameMapper": {
       "axios": "axios/dist/node/axios.cjs"
     }
-  },
-  "cracoConfig": "./src/configs/craco.config.js"
+  }
 }
