--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "7.23.2",
-    "@craco/craco": "^7.1.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "5.14.15",
     "@reduxjs/toolkit": "^1.9.7",
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
     "bcryptjs-react": "^2.4.6",
     "buffer": "^6.0.3",
     "core-js": "^3.33.2",
@@ -20,12 +19,14 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.3.1",
     "i18next": "^23.6.0",
+    "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "loader-utils": "3.2.1",
     "npx": "^10.2.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "playwright": "^1.39.0",
     "react": "18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-app-rewired": "^2.2.1",
@@ -43,12 +44,14 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@testing-library/react": "^14.0.0",
+    "@types/node": "^20.9.0",
     "prettier": "3.0.3"
   },
   "scripts": {
     "build": "react-app-rewired build --verbose",
     "start": "react-app-rewired -r dotenv/config start --verbose",
     "test": "react-app-rewired test --env=jsdom",
+    "jest": "jest",
     "prettify": "npx prettier . --write",
     "OLDbuild": "react-scripts build --verbose",
     "OLDstart": "react-scripts start --verbose",
