fixing prior merging to main

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@babel/runtime": "7.23.2",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
-    "@mui/icons-material": "^5.14.15",
-    "@mui/lab": "^5.0.0-alpha.150",
-    "@mui/material": "5.14.15",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "^5.0.0-alpha.159",
+    "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "bcryptjs-react": "^2.4.6",
